Update assignment 4 .html

--- a/assignment 4 .html
+++ b/assignment 4 .html
@@ -7,7 +7,7 @@
     
     <h1 align="center"><u>Sukoon Welfare Foundation</u></h1>
   
-  <table>
+  <table border="3px">
       <tr>
 <td><a href="#Intro">What Is SWF</a></td>
           <td><a href="#Services">SWF Services</a></td>
